# autofix_skills

./: README.md  SKILL.md  pyproject.toml
ci/: gitlab_ci.yml  jenkins_pipeline.groovy
claude_skills/: USER_GUIDE.md
claude_skills/api_type/signature-mismatch/: SKILL.md
claude_skills/api_type/type-conversion/: SKILL.md
claude_skills/build_config/blueprint-syntax/: SKILL.md
claude_skills/build_config/flag-cleaner/: SKILL.md
claude_skills/build_config/gn-scope/: SKILL.md
claude_skills/build_config/permission/: SKILL.md
claude_skills/linkage_dependency/multiple-def/: SKILL.md
claude_skills/linkage_dependency/rust-dep/: SKILL.md
claude_skills/linkage_dependency/symbol-dep/: SKILL.md
claude_skills/router/: SKILL.md
docs/: API.md  USER_GUIDE.md  design.md  requirement.md
src/: cli.py
src/build_adapters/: cmake.py  gn.py  interface.py  kbuild.py  makefile.py  parser.py  soong.py
src/context_engine/: ast_grep_client.py
src/orchestrator/: base.py
src/skill_registry/: manager.py
src/skills/: __init__.py  flag_cleaner.py  forward_decl.py  kbuild_object.py  multiple_def.py  namespace.py  symbol_dep.py  variant_mismatch.py  version_guard.py  vtable.py
src/utils/: logger.py
tests/: test_basic.py  test_build_adapters.py  test_cat_api_type.py  test_cat_build_config.py  test_cat_linkage.py  test_cat_symbol_header.py  test_parser.py  test_signature_mismatch.py  test_symbol_dep.py  test_wave1_skills.py  test_wave2.py  test_wave3.py  test_wave4.py
tests/integration/: test_scenarios.py
tests/real_world/: test_complex_logs.py
(+20 files in other folders)
