[project]
name = "autofix-skill"
version = "0.1.0"
description = "Automated build error repair system for AOSP/OpenHarmony"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
autofix = "autofix_skill.src.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["autofix_skill*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
